# mike

./: .gitignore  BUILD_PLAN_APPROVAL_SUMMARY.md  CLI_TESTING_REPORT.md  CLI_TESTING_REPORT_FIXED.md  CONTEXT.md  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  Makefile  README.md  coverage.xml  pyproject.toml  requirements.txt  setup.py  web_launcher.py
docs/plans/: 2026-03-01-m1-implementation.md  2026-03-02-cache-layer.md  2026-03-02-config-management.md  2026-03-02-m8-rebuilder-agent.md  2026-03-05-mike-tui-implementation.md
docs/superpowers/plans/: 2026-04-15-execution-trace-implementation.md  2026-04-15-three-primitives-implementation.md
docs/superpowers/specs/: 2026-04-15-execution-trace-design.md  2026-04-15-three-primitives-architecture-design.md
docs/v2/: git-intelligence.md  health-score.md  patch-mode.md  security.md
examples/: demo_rebuilder.py  orchestrator_demo.py  sample_build_plan.json
src/architectai/: __init__.py  __main__.py  api.py  bootstrap.py  cli.py  cli_orchestrator.py
src/architectai/agents/: __init__.py  code_generator.py  qa_agent.py  rebuilder_agent.py  refactor_agent.py  scaffolder.py
src/architectai/cache/: __init__.py  ast_cache.py  embedding_cache.py  graph_cache.py  manager.py
src/architectai/chunker/: __init__.py  chunker.py
src/architectai/config/: __init__.py  commands.py  loader.py  profiles.py  settings.py  validation.py
src/architectai/context/: __init__.py
src/architectai/db/: __init__.py  models.py
src/architectai/docs/: __init__.py  aggregator.py
src/architectai/embeddings/: __init__.py
src/architectai/graph/: __init__.py
src/architectai/monitoring/: README.md  __init__.py  dashboard.py  metrics.py  reporter.py  telemetry.py
src/architectai/orchestrator/: __init__.py  engine.py
src/architectai/parser/: languages.py  parser.py
src/architectai/performance/: __init__.py
src/architectai/pipeline/: __init__.py  graph_pipeline.py
src/architectai/scanner/: clone.py  scanner.py
src/architectai/vectorstore/: __init__.py  store.py
src/architectai/web/: __init__.py  app.py  components.py  theme_utils.py  utils.py
src/mike/: __init__.py  __main__.py  api.py  bootstrap.py  cli.py  cli_orchestrator.py
src/mike/agents/: __init__.py  code_executor.py  code_generator.py  iterative_generator.py  patterns.py  qa_agent.py  rebuilder_agent.py  refactor_agent.py  scaffolder.py
src/mike/agents/templates/: __init__.py
src/mike/cache/: __init__.py  ast_cache.py  embedding_cache.py  graph_cache.py  manager.py
src/mike/chunker/: __init__.py  chunker.py
src/mike/config/: __init__.py  commands.py  loader.py  profiles.py  settings.py  validation.py
src/mike/context/: __init__.py  assembler.py
src/mike/db/: health_repository.py  models.py  patch_repository.py  security_repository.py  session.py
src/mike/docs/: generator.py
src/mike/docs/templates/: API_REFERENCE.md.j2  ARCHITECTURE.md.j2  ENV_GUIDE.md.j2  README.md.j2
src/mike/embeddings/: __init__.py  service.py
src/mike/git/: __init__.py  analyzer.py  models.py
src/mike/graph/: __init__.py  builder.py
src/mike/health/: __init__.py  calculator.py  models.py
src/mike/monitoring/: README.md  __init__.py  dashboard.py  metrics.py  reporter.py  telemetry.py
src/mike/orchestrator/: __init__.py  context_engine.py  dag_executor.py  engine.py  model_provider.py  planner.py  state.py  trace.py
src/mike/parser/: __init__.py  parser.py
src/mike/patch/: __init__.py  applier.py  generator.py  models.py
src/mike/performance/: __init__.py  optimizer.py
src/mike/pipeline/: __init__.py  graph_pipeline.py
src/mike/scanner/: __init__.py  clone.py
src/mike/security/: __init__.py  models.py  patterns.py  scanner.py
src/mike/tui/: __init__.py  app.py  utils.py
src/mike/tui/screens/: dashboard.py  help.py  logs.py  main.py  session_detail.py  sessions.py  welcome.py
src/mike/tui/styles/: __init__.py  base.tcss  dark.tcss  light.tcss
src/mike/tui/widgets/: file_tree.py  notifications.py  session_card.py  sidebar.py  status_bar.py
src/mike/vectorstore/: __init__.py  store.py
src/mike/web/: __init__.py  app.py  components.py  theme_utils.py  utils.py
src/mike/web/components/: __init__.py  _core.py  git_chart.py  health_score.py  patch_preview.py  security_card.py
src/mike/web/pages/: __init__.py  git.py  health.py  patch.py  security.py
src/mike/web_api/: server.py
test_docs/: ARCHITECTURE.md  README.md
test_output/docs/: ARCHITECTURE.md  README.md
tests/: README.md  __init__.py  conftest.py  test_cli.py  test_integration.py
tests/cache/: test_ast_cache.py  test_embedding_cache.py  test_graph_cache.py  test_integration.py  test_manager.py
tests/cli/: test_v2_commands.py
tests/db/: test_models.py
tests/e2e/: test_cli.py
tests/fixtures/sample_repo/: README.md
tests/fixtures/sample_repo/src/: main.py  utils.js
tests/fixtures/sample_repos/javascript_project/: README.md
tests/fixtures/sample_repos/python_project/: README.md
tests/git/: test_analyzer.py
tests/health/: test_calculator.py
tests/integration/: test_agents.py  test_orchestrator_integration.py  test_pipeline.py  test_rebuilder_workflow.py  test_v2_features.py
tests/parser/: test_parser.py
tests/patch/: test_applier.py
tests/performance/: test_optimizer.py
tests/scanner/: test_scanner.py
tests/security/: test_scanner.py
tests/tui/: conftest.py  test_app.py  test_cli_integration.py  test_help_screen.py  test_integration.py  test_logs_screen.py  test_session_detail.py  test_sessions_screen.py  test_theme.py
tests/unit/: test_cache.py  test_chunker.py  test_config.py  test_context_engine.py  test_dag_executor.py  test_embeddings.py  test_graph.py  test_model_provider.py  test_parser.py  test_planner.py  test_scanner.py  test_trace.py  test_trace_integration.py  test_vectorstore.py
tests/unit/test_agents/: test_code_executor.py  test_iterative_generator.py  test_qa_agent.py  test_rebuilder_agent.py  test_refactor_agent.py
tests/utils/: assertions.py  factories.py  helpers.py
tests/web/: test_web_components.py
(+3 files in other folders)
