[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mike"
version = "0.2.0"
description = "Open-source, fully local multi-agent AI system that understands your entire codebase. DAG orchestration, semantic search, 8-language AST analysis. Works with Gemma, Qwen, Llama, Mistral via Ollama."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rajesh"}
]
keywords = [
    "ai", "multi-agent", "code-analysis", "architecture", "local-llm",
    "documentation", "ollama", "gemma", "llama", "qwen", "mistral",
    "code-review", "refactoring", "security-scanner", "dag-executor",
    "agentic-ai", "rag", "vector-search", "chromadb", "tree-sitter",
    "ast-analysis", "dependency-graph", "code-intelligence",
    "open-source-ai", "offline-ai", "private-ai", "developer-tools",
    "software-architecture", "code-generation", "semantic-search",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-java>=0.20.0",
    "tree-sitter-rust>=0.20.0",
    "tree-sitter-c>=0.20.0",
    "tree-sitter-cpp>=0.20.0",
    "tree-sitter-ruby>=0.20.0",
    "tree-sitter-php>=0.20.0",
    "PyGithub>=2.1.0",
    "requests>=2.31.0",
    "GitPython>=3.1.0",
    "chromadb>=0.4.0",
    "networkx>=3.0",
    "jinja2>=3.1.0",
    "langchain-text-splitters>=0.0.1",
    "pydantic>=2.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "joblib>=1.3.0",
    "diskcache>=5.6.0",
    "ollama>=0.1.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
    "pandas>=2.0.0",
    "streamlit-aggrid>=0.3.0",
    "pyvis>=0.3.0",
    "streamlit-ace>=0.1.0",
]
tui = [
    "textual>=0.50.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "factory-boy>=3.3.0",
    "responses>=0.23.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "textual-dev>=1.0.0",
]
all = [
    "mike[web,tui,dev]",
]

[project.scripts]
mike = "mike.cli:main"

[project.urls]
Homepage = "https://github.com/mike/mike"
Repository = "https://github.com/mike/mike"
Issues = "https://github.com/mike/mike/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "D"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=src/mike",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=90",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
    "performance: marks tests as performance tests",
    "requires_model: marks tests that require LLM models",
    "requires_chromadb: marks tests that require ChromaDB",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/mike"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/conftest.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
    "\\.\\.\\.",
    "# pragma: no cover",
]
show_missing = true
skip_covered = false
fail_under = 90
precision = 2

[tool.coverage.html]
directory = "htmlcov"
title = "Mike Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"
